--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-firebird": "^0.8.6",
     "react": "^16.4.2",
     "react-app": "^1.1.2",
     "react-dom": "^16.4.2",
